<resources>
    <string name="app_name">Tech &amp; Sports News</string>
    <string name="title_article_detail">Article Detail</string>
    <string name="tech_category">Technology</string>
    <string name="sports_category">Sports</string>
    <string name="title_sportsarticle_list">SportsArticles</string>
    <string name="title_sportsarticle_detail">SportsArticle Detail</string>
    <string name="icon_description">Logo image</string>
    <string name="full_story_text">Full story</string>
</resources>